--- a/style.css
+++ b/style.css
@@ -157,13 +157,19 @@ button:hover {
 	width: 100%;
 	height: 80vh;
 	background-color: rgba(255,255,255,0.4);
+	perspective: 380px;
 }
 
 .cardContainer {
 	height: 90%;
 	aspect-ratio: 3/5;
-	background-color: rgba(255,255,255,0.8);
 	border-radius: 25px;
+	box-shadow: 0px 0px 32px 8px rgba(0,0,0,0.6);
+	border: 0.5px solid #fff;
+	background-color: #f5eeee;
+	transform: rotateX(2deg) rotateY(1deg);
+ transform-style: preserve-3d;
+	overflow: hidden;
 }
 
 .cardHeader {
@@ -183,10 +189,18 @@ button:hover {
 }
 
 .cardBody {
-	background: url(img/pokeball.png);
 	background-size: contain;
 	background-repeat: no-repeat;
 	background-position: center;
-	opacity: 0.1;
 	height: 35vh;
+}
+
+.displayNone {
+	display: none;
+}
+
+.cardWrapper {
+	display: flex;
+	justify-content: center;
+	gap: 30px;
 }
