--- a/style.css
+++ b/style.css
@@ -148,16 +148,27 @@ button:hover {
 
 /* *card */
 
+.backgroundCardWrapper {
+	position: fixed;
+	z-index: 10;
+	width: 100%;
+	height: 80vh;
+
+}
+
 .cardWrapper {
 	position: fixed;
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	z-index: 5;
+	z-index: 10;
 	width: 100%;
 	height: 80vh;
 	background-color: rgba(255,255,255,0.4);
 	perspective: 380px;
+	gap: 30px;
+	border-radius: 10px;
+	backdrop-filter: blur(5px);
 }
 
 .cardContainer {
@@ -165,11 +176,14 @@ button:hover {
 	aspect-ratio: 3/5;
 	border-radius: 25px;
 	box-shadow: 0px 0px 32px 8px rgba(0,0,0,0.6);
-	border: 0.5px solid #fff;
-	background-color: #f5eeee;
-	transform: rotateX(2deg) rotateY(1deg);
+	border-left: 0.7px solid #fff;
+	border-bottom: 0.8px solid #fff;
+	transform: rotateX(1deg) rotateY(0.5deg);
  transform-style: preserve-3d;
 	overflow: hidden;
+	background-color: #e8e7e7;
+	display: flex;
+	flex-direction: column;
 }
 
 .cardHeader {
@@ -186,21 +200,31 @@ button:hover {
 .cardImg {
 	width: 70%;
 	object-position: center;
+	
 }
 
 .cardBody {
 	background-size: contain;
 	background-repeat: no-repeat;
 	background-position: center;
-	height: 35vh;
+	border-radius: 15px;
+	margin-top: -5vh;
+	background-color: #e8e7e7;
+	min-height: 60vh;
+	opacity: 0.85;
 }
 
 .displayNone {
 	display: none;
 }
 
-.cardWrapper {
-	display: flex;
-	justify-content: center;
-	gap: 30px;
+.cardContainer .cardImg {
+	z-index: 12;
 }
+
+.cardContainer h2 {
+	margin-bottom: 20px;
+}
+
+
+
