--- a/style.css
+++ b/style.css
@@ -148,78 +148,81 @@ button:hover {
 
 /* *card */
 
-.backgroundCardWrapper {
-	position: fixed;
-	z-index: 10;
-	width: 100%;
-	height: 80vh;
-
-}
-
 .cardWrapper {
 	position: fixed;
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	z-index: 10;
+	z-index: 9;
 	width: 94%;
 	height: 80vh;
-	background-color: rgba(135, 134, 134, 0.4);
-	perspective: 285px;
+	background: repeating-linear-gradient(45deg,  rgba(255,255,255,0.1) 0%, rgba(255,255,255,0.45) 35%, rgba(255,255,255,0.0984768907563025) 58%, rgba(255,255,255,0.51657212885154064) 73%, transparent);
+	perspective: 240px;
 	gap: 30px;
 	border-radius: 10px;
+	backdrop-filter: blur(5px);
+	border: 1px solid rgba(255,255,255,0.4);
+	cursor: pointer;
+}
+
+.cardBackgroundColor {
+	height: 90%;
+	aspect-ratio: 3/5;
+	border-radius: 10px;
+	box-shadow: 0px 0px 40px 12px rgba(0,0,0,0.8);
+	border-left: 1px solid #fff;
+	border-bottom: 1px solid rgba(255,255,255,0.7);
+	overflow: hidden;
+	transform: rotateX(0.8deg) rotateY(0.5deg);
+ transform-style: preserve-3d;
+	filter: brightness(1.05) contrast(1.4);
 	backdrop-filter: blur(5px);
 }
 
 .cardContainer {
-	height: 90%;
-	aspect-ratio: 3/5;
-	border-radius: 10px;
-	box-shadow: 0px 0px 32px 8px rgba(0,0,0,0.6);
-
-	border-left: 0.7px solid #fff;
-	border-bottom: 0.8px solid #fff;
-	transform: rotateX(0.5deg) rotateY(0.5deg);
- transform-style: preserve-3d;
-	overflow: hidden;
 	display: flex;
+	height: 100%;
 	flex-direction: column;
+	background: repeating-linear-gradient(45deg, rgba(255,255,255,0.2) 0%, rgba(255,255,255,0.35) 18%, rgba(255,255,255,0.1) 34%, rgba(255,255,255,0.35) 50%, rgba(255,255,255,0.0984768907563025) 68%, rgba(255,255,255,0.51657212885154064) 93%,  rgba(255,255,255,0.45) 100%, transparent);
+	color: #414141;
+	z-index: 10;
 }
 
 .cardHeader {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	padding: 20px;
+	padding: 20px 0 0 0;
+	z-index: 20;
+	height: 48%;
 }
 
 .cardContainer h2 {
 	text-align: center;
+	font-size: 200%;
+	transform: rotateX(0.8deg) rotateY(0.5deg);
+ transform-style: preserve-3d;
+	text-shadow: -2px 0px 3px #fff;
 }
 
 .cardImg {
 	width: 70%;
 	object-position: center;
-	
 }
 
 .cardBody {
-	background-size: contain;
-	background-repeat: no-repeat;
 	background-position: center;
-	border-radius: 15px;
-	margin-top: -50px;
-	background-color: #e8e7e7;
-	min-height: 60vh;
-	opacity: 0.85;
-}
+	background-color: rgba(255,255,255,0.3);
+	height: 52%;
+	border-radius: 15px 15px 0 0;
+	padding-top: 80px;
+	font-size: 1.2rem;
+	display: flex;
+	justify-content: center;
+	}
 
 .displayNone {
 	display: none;
-}
-
-.cardContainer .cardImg {
-	z-index: 12;
 }
 
 .cardContainer h2 {
@@ -228,11 +231,74 @@ button:hover {
 
 .headerCardContentContainer {
 	display: flex;
-	justify-content: space-around;
+	justify-content: space-between;
 	color: #414141;
-	padding: 20px 0;
-	background-color: #efefef;
+	width: 100%;
+	align-items: center;
+	border-bottom: 1px solid #414141;
+	padding: 0 20px 10px 20px;
+}
 
+.cardContainer h3 {
+ position: relative;
+	cursor: pointer;
+	z-index: 25;;
+}
+
+#pokeCardContent {
+	width: 80%;
+	display: flex;
+	flex-wrap: wrap;
+	gap: 12px 0;
+	height: max-content;
+	
+}
+
+#pokeCardContent h4 {
+	width: 30%;
+}
+
+#pokeCardContent h4::first-letter {
+	text-transform: uppercase;
+}
+
+#pokeCardContent p {
+	width: 50%;
+}
+
+
+p#cardMoves {
+	width: 100%;
+	display: flex;
+	gap: 8px;
+	flex-wrap: wrap;
+	font-size: 1rem;
+	padding: 0 10px 20px 0;
+	overflow-y: scroll;
+	height: 25vh;
+}
+
+.move::first-letter {
+	text-transform: uppercase;
+}
+
+/* ! Scrollbar */
+::-webkit-scrollbar {
+	width: 10px;
+	height: 5px;
+	background-color: rgba(0, 0, 0, 0.1);
+	border-radius: 50px;
+
+}
+
+::-webkit-scrollbar-thumb {
+	background-color: rgba(255, 255, 255, 0.3);
+	background-clip: padding-box;
+	border-radius: 50px;
+}
+
+::-webkit-scrollbar-track {
+	box-shadow: inset 0 0 6px rgba(255, 255, 255, 0.3);
 }
 
 
