--- a/style.css
+++ b/style.css
@@ -1,309 +1,440 @@
-* {
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
-}
+  @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;700&family=Rubik+Puddles&display=swap');
 
-body {
-	min-height: 100vh;
-	background-color: #333;
-	padding: 0 50px;
-	color: #fff;
-}
+  * {
+  	margin: 0;
+  	padding: 0;
+  	box-sizing: border-box;
+  }
 
-header {
-	height: 10vh;
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	gap: 50px;
-	margin-top: 50px;
-}
+  body {
+  	min-height: 100vh;
+  	background-color: #333;
+  	padding: 0 50px;
+  	color: #fff;
+  	font-family: 'Josefin Sans', sans-serif;
+  }
 
-img {
-	width: 100%;
-	height: auto;
-}
+  header {
+  	height: 10vh;
+  	display: flex;
+  	justify-content: space-between;
+  	align-items: center;
+  	gap: 50px;
+  	margin-top: 50px;
+  }
 
-h1 {
-	font-size: 3rem;
-	margin: 50px 0;
-	text-align: center;
-}
+  img {
+  	width: 100%;
+  	height: auto;
+  }
 
-h2 {
-	font-size: 1.6rem;
-}
+  h1 {
+  	font-size: 5rem;
+  	margin: 50px 0;
+  	text-align: center;
+  	font-family: 'Rubik Puddles', cursive;
+  }
 
-.logo {
-	width: 100px;
-	transform: rotateZ(-15deg);
-}
+  h2 {
+  	font-size: 1.6rem;
+  }
 
-#search {
-	flex: 1;
-	height: 5vh;
-	border-radius: 25px;
-	padding: 0 25px;
-	background-color: #414141;
-	color: #fff;
-}
+  .logo {
+  	width: 100px;
+  	transform: rotateZ(-15deg);
+  	cursor: pointer;
+  }
 
-input {
-	min-width: 200px;
-}
+  .logo:hover,
+  input:hover {
+  	filter: drop-shadow(1px -1px 35px rgba(255, 255, 255, 0.6));
+  }
 
-#search::placeholder {
-	color: #a7a5a5;
-}
+  #search {
+  	flex: 1;
+  	height: 5vh;
+  	border-radius: 25px;
+  	padding: 0 25px;
+  	background-color: #414141;
+  	color: #fff;
+  }
 
-#search:focus {
-	outline-color: rgb(6, 255, 255);
-}
+  input {
+  	min-width: 200px;
+  }
 
-.pokeWrapper {
-	display: flex;
-	justify-content: center;
-	flex-wrap: wrap;
-	gap: 20px;
-}
+  #search::placeholder {
+  	color: #a7a5a5;
+  }
 
-.pokeContainer {
-	color: white;
-	position: relative;
-	width: 300px;
-	height: 200px;
-	border-radius: 25px;
-	padding: 20px;
-	overflow: hidden;
-	cursor: pointer;
-	transition: all 125ms ease-in-out;
-}
+  #search:focus {
+  	outline-color: rgba(255, 255, 255, 0.2);
+  }
 
-.pokeContainer:hover {
-	box-shadow: inset 0px 0px 32px 16px rgba(255,255,255,0.8);
-	transition: all 125ms ease-in-out;
-}
+		.searchInfo {
+			font-size: 2rem;
+		}
 
-.backgroundPokeImg {
-	position: absolute;
-	right: 0;
-	bottom: 0;
-	z-index: 1;
-	overflow: hidden;
-	width: 40%;
-	z-index: 1;
-	opacity: 0.5;
-	transform: rotateZ(15deg);
-	translate: 25px 15px;
-}
+  .pokeWrapper {
+  	display: flex;
+  	justify-content: center;
+  	flex-wrap: wrap;
+  	gap: 20px;
+  }
 
-.pokeFrontImg {
-	position: absolute;
-	right: 20px;
-	bottom: 10px;
-	z-index: 2;
-	width: 55%;
-	translate: 5px 15px;
-}
+  .pokeContainer {
+  	color: white;
+  	position: relative;
+  	width: 300px;
+  	height: 200px;
+  	border-radius: 25px;
+  	padding: 20px;
+  	overflow: hidden;
+  	cursor: pointer;
+  	transition: all 125ms ease-in-out;
+  }
 
-h2::first-letter {
-	text-transform: uppercase;
-}
+  .pokeContainer:hover {
+  	box-shadow: inset 0px 0px 32px 16px rgba(255, 255, 255, 0.8);
+  	transition: all 125ms ease-in-out;
+  }
 
-.pokeType {
-	background-color: rgba(0, 0, 0, 0.2);
-	width: 30%;
-	padding: 5px 15px;
-	border-radius: 15px;
-	text-align: center;
-	margin-top: 20px;
-}
+  .backgroundPokeImg {
+  	position: absolute;
+  	right: 0;
+  	bottom: 0;
+  	z-index: 1;
+  	overflow: hidden;
+  	width: 40%;
+  	z-index: 1;
+  	opacity: 0.5;
+  	transform: rotateZ(15deg);
+  	translate: 25px 15px;
+  }
 
-#nextButtonContainer {
-	margin: 50px 0;
-	display: flex;
-	justify-content: center;
-	gap: 50px;
-}
+  .pokeFrontImg {
+  	position: absolute;
+  	right: 20px;
+  	bottom: 10px;
+  	z-index: 2;
+  	width: 55%;
+  	translate: 5px 15px;
+  }
 
-button {
-	padding: 10px 20px;
-	text-transform: uppercase;
-	border-radius: 25px;
-	color: #fff;
-	background-color: #414141;
-	cursor: pointer;
-	font-size: 1.5rem;
-}
+  h2::first-letter {
+  	text-transform: uppercase;
+  }
 
-button:hover {
-	background-color: #606060;
-}
+  .pokeType {
+  	background-color: rgba(0, 0, 0, 0.2);
+  	width: 30%;
+  	padding: 5px 15px;
+  	border-radius: 15px;
+  	text-align: center;
+  	margin-top: 20px;
+  }
 
-.displayNone {
-	display: none;
-}
+  #nextButtonContainer {
+  	margin: 50px 0;
+  	display: flex;
+  	justify-content: center;
+  	gap: 50px;
+  }
 
+  button {
+  	padding: 10px 20px;
+  	text-transform: uppercase;
+  	border-radius: 25px;
+  	color: #fff;
+  	background-color: #414141;
+  	cursor: pointer;
+  	font-size: 1.5rem;
+  }
 
-/* *card */
+  button:hover {
+  	background-color: #606060;
+  }
 
-.cardWrapper {
-	position: fixed;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	z-index: 9;
-	width: 94%;
-	height: 80vh;
-	background: repeating-linear-gradient(45deg,  rgba(255,255,255,0.1) 0%, rgba(255,255,255,0.45) 35%, rgba(255,255,255,0.0984768907563025) 58%, rgba(255,255,255,0.51657212885154064) 73%, transparent);
-	perspective: 240px;
-	gap: 30px;
-	border-radius: 10px;
-	backdrop-filter: blur(5px);
-	border: 1px solid rgba(255,255,255,0.4);
-	cursor: pointer;
-}
-
-.cardBackgroundColor {
-	height: 90%;
-	aspect-ratio: 3/5;
-	border-radius: 10px;
-	box-shadow: 0px 0px 40px 12px rgba(0,0,0,0.8);
-	border-left: 1px solid #fff;
-	border-bottom: 1px solid rgba(255,255,255,0.7);
-	overflow: hidden;
-	transform: rotateX(0.8deg) rotateY(0.5deg);
- transform-style: preserve-3d;
-	filter: brightness(1.05) contrast(1.4);
-	backdrop-filter: blur(5px);
-}
-
-.cardContainer {
-	display: flex;
-	height: 100%;
-	flex-direction: column;
-	background: repeating-linear-gradient(45deg, rgba(255,255,255,0.2) 0%, rgba(255,255,255,0.35) 18%, rgba(255,255,255,0.1) 34%, rgba(255,255,255,0.35) 50%, rgba(255,255,255,0.0984768907563025) 68%, rgba(255,255,255,0.51657212885154064) 93%,  rgba(255,255,255,0.45) 100%, transparent);
-	color: #414141;
-	z-index: 10;
-	cursor: auto;
-}
-
-.cardHeader {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	padding: 20px 0 0 0;
-	z-index: 20;
-	height: 48%;
-}
-
-.cardContainer h2 {
-	text-align: center;
-	font-size: 200%;
-	transform: rotateX(0.8deg) rotateY(0.5deg);
- transform-style: preserve-3d;
-	text-shadow: -2px 0px 3px #fff;
-}
-
-.cardImg {
-	width: 70%;
-	object-position: center;
-}
-
-.cardBody {
-	background-position: center;
-	background-color: rgba(255,255,255,0.3);
-	height: 52%;
-	border-radius: 15px 15px 0 0;
-	padding-top: 80px;
-	font-size: 1.2rem;
-	display: flex;
-	justify-content: center;
-	}
-
-.displayNone {
-	display: none;
-}
-
-.cardContainer h2 {
-	margin-bottom: 20px;
-}
-
-.headerCardContentContainer {
-	display: flex;
-	justify-content: space-around;
-	color: #414141;
-	width: 100%;
-	align-items: center;
-	border-bottom: 1px solid #414141;
-	padding: 0 0 10px 0;
-}
-
-.cardContainer h3 {
- position: relative;
-	cursor: pointer;
-	z-index: 25;;
-}
-
-#pokeCardContent {
-	width: 80%;
-	display: flex;
-	flex-wrap: wrap;
-	gap: 12px 0;
-	height: max-content;
-	
-}
-
-#pokeCardContent h4 {
-	width: 30%;
-}
-
-#pokeCardContent h4::first-letter {
-	text-transform: uppercase;
-}
-
-#pokeCardContent p {
-	width: 50%;
-}
+  .displayNone {
+  	display: none;
+  }
 
 
-p#cardMoves {
-	width: 100%;
-	display: flex;
-	gap: 16px 8px;
-	flex-wrap: wrap;
-	font-size: 1rem;
-	padding: 0 10px 20px 0;
-	overflow-y: scroll;
-	height: 25vh;
-}
+  /* *card */
 
-.move::first-letter {
-	text-transform: uppercase;
-}
+  .cardWrapper {
+  	position: fixed;
+  	bottom: 20px;
+  	left: 20px;
+  	right: 20px;
+  	;
+  	display: flex;
+  	justify-content: center;
+  	align-items: center;
+  	z-index: 9;
+  	max-width: 100%;
+  	height: 80vh;
+  	background: repeating-linear-gradient(45deg, rgba(255, 255, 255, 0.1) 0%, rgba(255, 255, 255, 0.45) 35%, rgba(255, 255, 255, 0.0984768907563025) 58%, rgba(255, 255, 255, 0.51657212885154064) 73%, transparent);
+  	perspective: 240px;
+  	gap: 30px;
+  	border-radius: 10px;
+  	backdrop-filter: blur(5px);
+  	border: 1px solid rgba(255, 255, 255, 0.4);
+  	cursor: pointer;
+  }
 
-/* ! Scrollbar */
-::-webkit-scrollbar {
-	width: 10px;
-	height: 5px;
-	background-color: rgba(0, 0, 0, 0.1);
-	border-radius: 50px;
-}
+  .closeX {
+  	position: absolute;
+  	top: 10px;
+  	right: 20px;
+  	font-size: 1.5rem;
+  }
 
-::-webkit-scrollbar-thumb {
-	background-color: rgba(255, 255, 255, 0.3);
-	background-clip: padding-box;
-	border-radius: 50px;
-}
+  .cardBackgroundColor {
+  	height: 90%;
+  	aspect-ratio: 3/5;
+  	border-radius: 10px;
+  	box-shadow: 0px 0px 40px 12px rgba(0, 0, 0, 0.8);
+  	border-left: 1px solid #fff;
+  	border-bottom: 1px solid rgba(255, 255, 255, 0.7);
+  	overflow: hidden;
+  	transform: rotateX(0.8deg) rotateY(0.5deg);
+  	transform-style: preserve-3d;
+  	filter: brightness(1.05) contrast(1.4);
+  	backdrop-filter: blur(5px);
+  }
 
-::-webkit-scrollbar-track {
-	box-shadow: inset 0 0 6px rgba(255, 255, 255, 0.3);
-}
+  .cardContainer {
+  	display: flex;
+  	height: 100%;
+  	flex-direction: column;
+  	background: repeating-linear-gradient(45deg, rgba(255, 255, 255, 0.2) 0%, rgba(255, 255, 255, 0.35) 18%, rgba(255, 255, 255, 0.1) 34%, rgba(255, 255, 255, 0.35) 50%, rgba(255, 255, 255, 0.0984768907563025) 68%, rgba(255, 255, 255, 0.51657212885154064) 93%, rgba(255, 255, 255, 0.45) 100%, transparent);
+  	color: #414141;
+  	z-index: 10;
+  	cursor: auto;
+  }
 
-canvas {
-	width: 300px;
-	transform: translate(-7%, -12%);
-}
+  .cardHeader {
+  	display: flex;
+  	flex-direction: column;
+  	align-items: center;
+  	padding: 20px 0 0 0;
+  	z-index: 20;
+  	height: 48%;
+  }
 
+  .cardContainer h2 {
+  	text-align: center;
+  	font-size: 200%;
+  	transform: rotateX(0.8deg) rotateY(0.5deg);
+  	transform-style: preserve-3d;
+  	text-shadow: -2px 0px 3px #fff;
+  }
 
+  .cardImg {
+  	width: 70%;
+  	object-position: center;
+  }
+
+  .cardBody {
+  	background-position: center;
+  	background-color: rgba(255, 255, 255, 0.3);
+  	height: 52%;
+  	border-radius: 15px 15px 0 0;
+  	padding-top: 80px;
+  	font-size: 1.2rem;
+  	display: flex;
+  	justify-content: center;
+  }
+
+  .displayNone {
+  	display: none;
+  }
+
+  .cardContainer h2 {
+  	margin-bottom: 20px;
+  }
+
+  .headerCardContentContainer {
+  	display: flex;
+  	justify-content: space-around;
+  	color: #414141;
+  	width: 100%;
+  	align-items: center;
+  	border-bottom: 1px solid #414141;
+  	padding: 0 0 10px 0;
+  }
+
+  .cardContainer h3 {
+  	position: relative;
+  	cursor: pointer;
+  	z-index: 25;
+  }
+
+  #pokeCardContent {
+  	width: 80%;
+  	display: flex;
+  	flex-wrap: wrap;
+  	gap: 12px 10px;
+  	height: max-content;
+
+  }
+
+  #pokeCardContent h4 {
+  	width: 30%;
+  }
+
+  #pokeCardContent h4::first-letter {
+  	text-transform: uppercase;
+  }
+
+  #pokeCardContent p {
+  	width: 50%;
+  }
+
+  p#cardMoves {
+  	width: 100%;
+  	display: flex;
+  	gap: 16px 8px;
+  	flex-wrap: wrap;
+  	font-size: 1rem;
+  	padding: 0 10px 20px 0;
+  	overflow-y: scroll;
+  	height: 25vh;
+  }
+
+  .move::first-letter {
+  	text-transform: uppercase;
+  }
+
+  /* ! Scrollbar */
+  ::-webkit-scrollbar {
+  	width: 10px;
+  	height: 5px;
+  	background-color: rgba(0, 0, 0, 0.1);
+  	border-radius: 50px;
+  }
+
+  ::-webkit-scrollbar-thumb {
+  	background-color: rgba(255, 255, 255, 0.3);
+  	background-clip: padding-box;
+  	border-radius: 50px;
+  }
+
+  ::-webkit-scrollbar-track {
+  	box-shadow: inset 0 0 6px rgba(255, 255, 255, 0.3);
+  }
+
+  canvas {
+  	width: 300px;
+  	transform: translate(-7%, -12%);
+  }
+
+  footer {
+  	display: flex;
+  	flex-direction: column;
+  	align-items: center;
+  	gap: 5px;
+  	padding: 20px 0;
+  	border-top: 2px solid #414141;
+  }
+
+  footer a {
+  	color: #fff;
+  	text-decoration: none;
+  }
+
+  footer a:hover {
+  	text-decoration: underline;
+  	text-underline-offset: 0.2em;
+  }
+
+  /* ! beginn mediaquery */
+
+  @media (max-width: 680px) {
+  	body {
+  		padding: 0 5px;
+  	}
+
+  	header {
+  		margin-top: 20px;
+  		height: 5vh;
+  		gap: 15px;
+  	}
+
+  	h1 {
+  		font-size: 3.5rem;
+  	}
+
+  	input#search {
+  		height: 40px;
+  		min-width: 100px;
+  	}
+
+  	.logo {
+  		width: 50px;
+  	}
+
+  	button {
+  		padding: 5px 10px;
+  		font-size: 1rem;
+  	}
+
+  	.cardWrapper {
+  		position: relative;
+  		position: fixed;
+  		width: 100%;
+  		left: 2px;
+  		right: 2px;
+  	}
+
+  	.cardWrapper button {
+  		position: absolute;
+  		bottom: 10px;
+  		z-index: 25;
+  	}
+
+  	.cardWrapper button:first-child {
+  		left: 10px;
+  	}
+
+  	.cardWrapper button:last-child {
+  		right: 10px;
+  	}
+
+  	.cardBackgroundColor {
+  		height: auto;
+  		max-height: 90%;
+  		max-width: 96%;
+  	}
+
+  	.cardBody {
+  		font-size: calc(0.8rem + 1vw);
+  	}
+
+  	.cardHeader {
+  		height: 40%;
+  		padding-top: 10px;
+  	}
+
+  	.cardContainer h3 {
+  		font-size: calc(1rem + 1vw);
+  	}
+
+  	.cardContainer h4 {
+  		font-size: calc(0.9rem + 1vw);
+  	}
+
+  	#pokeCardContainer h4 {
+  		width: 40%;
+  	}
+
+  	.cardBody {
+  		padding-top: 120px;
+  		height: 60%;
+  	}
+
+  	p#cardMoves {
+  		height: 12vh;
+  	}
+  }
